k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  labels:
    app: client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: client
          image: armanmasoumi/gophercon-client:demo
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
            - name: grpc
              containerPort: 8001
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/rabbitmq-admin
              name: rabbitmq-admin
              readOnly: true
          resources:
            requests:
              cpu: 0.1
              memory: "100Mi"
            limits:
              cpu: 0.5
              memory: "100Mi"
      volumes:
        - name: rabbitmq-admin
          secret:
            secretName: rabbitmq-admin
