k8s/events-listener-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: events-listener
spec:
  selector:
    app: events-listener
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
    - name: grpc
      protocol: TCP
      port: 8001
      targetPort: 8001
  type: NodePort
